--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,10 +7,15 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        android:visible="false"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_choose_theme"
         android:title="@string/action_choose_theme" />
+
+    <item
+        android:id="@+id/action_open_github_project"
+        android:title="@string/action_open_github_project" />
 
 </menu>
