--- a/app/src/main/res/values-v21/themes_list.xml
+++ b/app/src/main/res/values-v21/themes_list.xml
@@ -4,5 +4,6 @@
     <string-array name="themes_list" tools:ignore="InconsistentArrays">
         <item>@string/choice_light_mode</item>
         <item>@string/choice_dark_mode</item>
+        <item>@string/choice_system_mode</item>
     </string-array>
 </resources>
